@@ -51,12 +51,12 @@
 ;; TODO:: replace-program and the saving/storing of lfun closure values.
 ;; TODO:: Is this desirable anyway?
               
-(Project-Version lpmud 3-3 410)
-(Parent-Version lpmud 3-3 409)
-(Version-Log "Added time delay before a dirty mapping is compacted.")
+(Project-Version lpmud 3-3 411)
+(Parent-Version lpmud 3-3 410)
+(Version-Log "Insert checks so that the driver won't access the non-existing name of the default wizlist entry.")
 (New-Version-Log
 "")
-(Checkin-Time "Mon, 03 Mar 2003 20:04:58 -0700")
+(Checkin-Time "Wed, 05 Mar 2003 15:31:28 -0700")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -93,7 +93,7 @@
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.8 644))
   (CREDITS (lpmud/d/22_CREDITS 1.70.1.59 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.473 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.474 644))
   (HISTORY (lpmud/f/49_HISTORY 1.306 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.19 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
@@ -176,7 +176,7 @@
   (src/files.c (lpmud/i/50_files.c 1.20 644))
   (src/filestat.h (lpmud/f/51_filestat.h 1.7 644))
   (src/gcollect.h (lpmud/f/33_gcollect.h 1.6.1.14 644))
-  (src/gcollect.c (lpmud/c/30_gcollect.c 1.41.1.96 644))
+  (src/gcollect.c (lpmud/c/30_gcollect.c 1.41.1.97 644))
   (src/hash.h (lpmud/f/32_hash.h 1.5 644))
   (src/hash.c (lpmud/c/28_hash.c 1.15 644))
   (src/heartbeat.h (lpmud/m/41_heartbeat. 1.6.1.5 644))
@@ -201,7 +201,7 @@
   (src/my-alloca.h (lpmud/f/29_my-alloca. 1.3.1.2 644))
   (src/my-rusage.h (lpmud/f/28_my-rusage. 1.7 644))
   (src/object.h (lpmud/44_object.h 1.34.1.19.1.3 644))
-  (src/object.c (lpmud/45_object.c 1.62.1.88.1.22 644))
+  (src/object.c (lpmud/45_object.c 1.62.1.88.1.23 644))
   (src/otable.h (lpmud/f/27_otable.h 1.8.1.4 644))
   (src/otable.c (lpmud/43_otable.c 1.22.1.6 644))
   (src/parser.c (lpmud/l/13_parser.c 1.1 644))
@@ -269,7 +269,7 @@
   (src/simul_efun.h (lpmud/f/17_simul_efun 1.5.1.5 644))
   (src/simul_efun.c (lpmud/32_simul_efun 1.20.1.17.1.3 644))
   (src/simulate.h (lpmud/f/16_simulate.h 1.25.1.31 644))
-  (src/simulate.c (lpmud/31_simulate.c 1.88.1.103 644))
+  (src/simulate.c (lpmud/31_simulate.c 1.88.1.104 644))
   (src/smalloc.h (lpmud/29_smalloc.h 1.16.1.14 644))
   (src/smalloc.c (lpmud/30_smalloc.c 1.31.1.73 644))
   (src/structs.h (lpmud/d/b/5_structs.h 1.3 644))
